# FreeRTOS-BlackPill

./: CMakeLists.txt  README.md  STM32F411xE.ld  STM32F411xE.svd  gcc-arm-none-eabi.cmake
FreeRTOS/: tasks.c
inc/: FreeRTOSConfig.h  debug.h  gpio.h  uart.h
src/:  main.c  debug.c  gpio.c  main.c  startup_stm32f411xe.c  syscall.c  uart.c
